; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_spawn-polkit-agent.c_polkit_agent_open_if_enabled.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_spawn-polkit-agent.c_polkit_agent_open_if_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUS_TRANSPORT_LOCAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @polkit_agent_open_if_enabled(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @BUS_TRANSPORT_LOCAL, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %16

14:                                               ; preds = %10
  %15 = call i32 (...) @polkit_agent_open()
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %14, %13, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @polkit_agent_open(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
